# replay

./: .bazel-nix.rc  .bazelrc  .bazelrc.nixpkgs  .envrc  .git-blame-ignore-revs  .gitignore  .hie-bios  .stylish-haskell.yaml  BUILD.bazel  ChangeLog.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bazel_xcode_local.diff  config.ini  extensions.bzl  flake.nix  ghc.bzl  ghc_inside_nix.bzl  init_gazelle_haskell.bzl  nixpkgs.nix  package.yaml  pkgdb_to_bzl.py  readme.html  repos.bzl  result  rules_haskell.patch  rules_nixpkgs_go.patch  rules_nixpkgs_stat_fail.diff  shell.nix  stack.yaml  stackage_snapshot.json  utils.bzl
.github/: renovate.json  update-hash
.github/workflows/: test.yml  update-flake-lock.yml  update-niv.yml
app/: Main.hs  Version.hs
gazelle/: BUILD.bazel  go.mod  go.sum
nix/: default.nix  ghc.nix  sources.json
py_runtime/: BUILD.bazel
py_toolchain/: BUILD.bazel
registry/modules/rules_haskell_nix/0.19/: MODULE.bazel  source.json
registry/modules/rules_haskell_nix/0.19/patches/: os_arch_dependent.diff  set-bzlmod-true.diff
registry/modules/rules_nixpkgs_cc/: metadata.json
registry/modules/rules_nixpkgs_cc/0.11.1/: MODULE.bazel
registry/modules/rules_nixpkgs_cc/0.12.0/: source.json
registry/modules/rules_nixpkgs_cc/0.12.0/patches/: extra_flags_per_feature.patch  postLinkSignHook.patch
registry/modules/rules_nixpkgs_go/0.11.1/: MODULE.bazel
registry/modules/rules_nixpkgs_java/: metadata.json
registry/modules/rules_nixpkgs_python/: metadata.json
src/: Lib.hs  UI.hs
